<resources>
    <string name="app_name">Room Booking</string>
    <string name="wait">Please Wait…</string>
    <string name="room_image">Room Image</string>
    <string name="filters">Filters</string>
    <string name="sort">Sort by</string>
    <string name="post_room">Submit</string>
    <string name="menu_sort_by_location">Location</string>
    <string name="menu_sort_by_name">Name</string>
    <string name="menu_sort_by_size">Size</string>
    <string name="menu_sort_by_capacity">Capacity</string>
    <string name="available_title">Room Availability</string>
    <string name="is_available">available</string>
    <string name="filter_by_name">Filter by name</string>
    <string name="room_size">Size: %s</string>
    <string name="room_number">Room #%s</string>
    <string name="room_number_and_floor">Room #%s at %s</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="room_capacity_text_view">%s recommended for %d persons</string>
    <string name="room_booking">Book it Now</string>
    <string name="from_to">Book from %s to %s for:</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="add">Add</string>
    <string name="error_invalid_name">Please enter attendee name</string>
    <string name="error_invalid_email">Email is not valid</string>
    <string name="error_invalid_phone">Please enter attendee phone number</string>
    <string name="ok">OK</string>
    <string name="attendee_details"><b>Attendee details:</b>\n%s\n%s\n%s</string>
    <string name="submit">Submit</string>
    <string name="there_is_noe_attendee">There is no attendee!</string>
    <string name="submit_completed">Submited successfully!</string>
    <string name="submit_faild">There is something wrong with submitting process!</string>
    <string name="dialog_title">Please enter event details</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="remove">Remove</string>
</resources>
