<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/spacing_normal">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/eventTitleEditText"
        android:textAlignment="viewStart"
        app:hintAnimationEnabled="true">

        <EditText
            android:id="@+id/eventTitleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_small"
            android:hint="@string/title"
            android:inputType="text"
            android:textSize="@dimen/text_size_large" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/eventDescriptionEditText"
        android:textAlignment="viewStart"
        app:hintAnimationEnabled="true">

        <EditText
            android:id="@+id/eventDescriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_small"
            android:hint="@string/description"
            android:inputType="text"
            android:textSize="@dimen/text_size_large" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/submitEventButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_small"
        android:layout_marginTop="@dimen/spacing_large"
        android:background="@color/colorAccent"
        android:text="@string/submit"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_large" />

</LinearLayout>