<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLightGreenA50"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/keyline_1"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/available_title"
            android:textColor="@color/colorGrey900"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/isAvailableCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_normal"
            android:layout_marginStart="@dimen/keyline_1"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/is_available"
            android:textColor="@color/colorGrey900" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGrey50"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/keyline_1"
            android:layout_marginTop="@dimen/spacing_large"
            android:labelFor="@id/filterByNameTextBox"
            android:text="@string/filter_by_name"
            android:textColor="@color/colorGrey900"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/filterByNameTextBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_normal"
            android:layout_marginStart="@dimen/keyline_1"
            android:layout_marginTop="@dimen/spacing_normal"
            android:focusable="true"
            android:inputType="text" />
    </LinearLayout>
</LinearLayout>
